--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="redstar.css">
         <title>Andrew Wheir's Webpage</title>
     </head>
     <body>
-        <h1>Landing Page for my website! She is a work in progress</h1>
-        <a href="about.html">About Me<br></a>
-        <a href="resume.html">Resume<br></a>
-        <a href="service.html">Service<br></a>
-        <a href="portfolio.html">Projects<br></a>
-        <a href="contact.html">Contact</a>
+        <h1>Andrew Wheir</h1>
+        <p> Welcome to my Website!</p>
+        <a href="about.html"     class = "button-1"> About Me<br></a>
+        <a href="resume.html"    class = "button-2"> Resume<br></a>
+        <a href="service.html"   class = "button-3"> Service<br></a>
+        <a href="portfolio.html" class = "button-4"> Projects<br></a>
+        <a href="contact.html"   class = "button-5"> Contact</a>
     </body>
 </html>
