--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="redstar.css">
         <title>Andrew Wheir's Webpage</title>
     </head>
     <body>
