--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="redstar.css">s
         <title>Andrew Wheir's Webpage</title>
     </head>
     <body>
         <h1>Contact</h1>
-        <p>Page with my contact information and various links, eventually</p>
+        <p>Page with my contact info</p>
         <a href="index.html">Home Page<br></a>
         <a href="about.html">About Me<br></a>
         <a href="resume.html">Resume<br></a>
