added the home page without css and my resume

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Contact</h1>
-        <p>Page with my contact info</p>
+        <p>Page with my contact info, eventually</p>
         <a href="index.html">Home Page<br></a>
         <a href="about.html">About Me<br></a>
         <a href="resume.html">Resume<br></a>
