--- a/no_css.html
+++ b/no_css.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="redstar.css">
         <title>Andrew Wheir's Webpage</title>
     </head>
     <body>
         <h1>Andrew Wheir</h1>
-        <p> Welcome to my Website! She is a Work in Progress at the moment</p>
+        <p> Welcome to my Website!</p>
         <a href="about.html"     class = "button-1"> About Me<br></a>
         <a href="resume.html"    class = "button-2"> Resume<br></a>
         <a href="service.html"   class = "button-3"> Service<br></a>
