--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Resume</h1>
-        <p>Page with my resume and other qualifications, eventually</p>
+        <p>Page with my resume (which you can find <a href="Andrew Wheir Resume.pdf">here</a>) and other qualifications, eventually</p>
         <a href="index.html">Home Page<br></a>
         <a href="about.html">About Me<br></a>
         <a href="resume.html">Resume<br></a>
