--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="redstar.css">s
+        <link rel="stylesheet" href="redstar.css">
         <title>Andrew Wheir's Webpage</title>
     </head>
     <body>
