--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="redstar.css">
+        <link rel="stylesheet" href="redstar_land.css">
         <title>Andrew Wheir's Webpage</title>
     </head>
     <body>
-        <h1>Andrew Wheir</h1>
-        <p> Welcome to my Website! She is a Work in Progress at the moment</p>
-        <a href="about.html"     class = "button-1"> About Me<br></a>
-        <a href="resume.html"    class = "button-2"> Resume<br></a>
-        <a href="service.html"   class = "button-3"> Service<br></a>
-        <a href="portfolio.html" class = "button-4"> Projects<br></a>
-        <a href="contact.html"   class = "button-5"> Contact</a>
+        <h1>Andrew Wheir (landing page)</h1>
+        <div class = "center">
+            <a href="about.html"     class = "button-1"> About Me<br></a>
+            <a href="resume.html"    class = "button-2"> Resume  <br></a>
+            <a href="service.html"   class = "button-3"> Service <br></a>
+            <a href="portfolio.html" class = "button-4"> Projects<br></a>
+            <a href="contact.html"   class = "button-5"> Contact <br></a>
+        </div>
     </body>
 </html>
