--- a/about.html
+++ b/about.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="redstar.css">
+        <link rel="stylesheet" href="redstar_sub.css">
         <title>Andrew Wheir's Webpage</title>
     </head>
+
     <body>
-        <h1>About Me</h1>
-        <p>My about page, eventually</p>
-        <a href="index.html">Home Page<br></a>
-        <a href="about.html">About Me<br></a>
-        <a href="resume.html">Resume<br></a>
-        <a href="service.html">Service<br></a>
-        <a href="portfolio.html">Projects<br></a>
-        <a href="contact.html">Contact</a>
+        <h1>Andrew Wheir - About Me</h1>
+        <div class="sidenav">
+            <a href="index.html">Home Page<br></a>
+            <a href="about.html">About Me<br></a>
+            <a href="resume.html">Resume<br></a>
+            <a href="service.html">Service<br></a>
+            <a href="portfolio.html">Projects<br></a>
+            <a href="contact.html">Contact</a>
+        </div>
+        <div class="body-text">
+            <p>My about page, eventually<br><br><br><br><br></p>
+        </div>
+        
     </body>
+
 </html>
