--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="redstar.css">
+        <link rel="stylesheet" href="redstar_sub.css">
         <title>Andrew Wheir's Webpage</title>
     </head>
     <body>
