--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,25 @@
         <title>Andrew Wheir's Webpage</title>
     </head>
     <body>
-        <h1>Contact</h1>
-        <p>Page with my contact info, eventually</p>
-        <a href="index.html">Home Page<br></a>
-        <a href="about.html">About Me<br></a>
-        <a href="resume.html">Resume<br></a>
-        <a href="service.html">Service<br></a>
-        <a href="portfolio.html">Projects<br></a>
-        <a href="contact.html">Contact</a>
+        <h1>Contacting Andrew Wheir</h1>
+        <script src="functions.js"></script>
+        <div class="sidenav">
+            <a onclick = "switchLand()" href="index.html">Home Page<br></a>
+            <a href="about.html">About Me<br></a>
+            <a href="resume.html">Resume<br></a>
+            <a href="service.html">Service<br></a>
+            <a href="portfolio.html">Projects<br></a>
+            <a href="contact.html">Contact</a>
+            <a onclick = "switchTheme()">Switch Theme</button></a>
+        </div>
+        <div class="body-text">
+            <p> 
+                My email is andywheir@gmail.com. Feel free to reach out with any questions or comments.</br>
+                Here are the other places you can find my stuff: </br></br></br>
+                <a href="github.com/Wheirdo">Github</a> </br>
+                <a href="https://www.linkedin.com/in/andrew-wheir/">Linkedin</a> </br>
+                <a href="https://tamu-csm.symplicity.com/profiles/andrewwheir">Career Center Page</a>
+            </p>
+        </div>
     </body>
 </html>
