--- a/no_css.html
+++ b/no_css.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Andrew Wheir's Webpage</title>
+        <title>Andrew Wheir's Webpage</title> 
     </head>
     <body>
         <h1>Andrew Wheir</h1>
-        <p> Welcome to my Website!</p>
-        <a href="about.html"     class = "button-1"> About Me<br></a>
-        <a href="resume.html"    class = "button-2"> Resume<br></a>
-        <a href="service.html"   class = "button-3"> Service<br></a>
-        <a href="portfolio.html" class = "button-4"> Projects<br></a>
-        <a href="contact.html"   class = "button-5"> Contact</a>
+        <div class="sidenav">
+            <a href="about.html">About Me<br></a>
+            <a href="resume.html">Resume<br></a>
+            <a href="service.html">Service<br></a>
+            <a href="portfolio.html">Projects<br></a>
+            <a href="contact.html">Contact</a>
+            <a onclick = "switchTheme()">Switch Theme</button></a>
+        </div>
+        <div class="body-text">
+        </div>
     </body>
 </html>
