--- a/resume.html
+++ b/resume.html
@@ -5,13 +5,32 @@
         <title>Andrew Wheir's Webpage</title>
     </head>
     <body>
-        <h1>Resume</h1>
-        <p>Page with my resume (which you can find <a href="Andrew Wheir Resume.pdf">here</a>) and other qualifications, eventually</p>
-        <a href="index.html">Home Page<br></a>
-        <a href="about.html">About Me<br></a>
-        <a href="resume.html">Resume<br></a>
-        <a href="service.html">Service<br></a>
-        <a href="portfolio.html">Projects<br></a>
-        <a href="contact.html">Contact</a>
+        <h1>Andrew Wheir - Resume</h1>
+        <script src="functions.js"></script>
+        <div class="sidenav">
+            <a onclick = "switchLand()" href="index.html">Home Page<br></a>
+            <a href="about.html">About Me<br></a>
+            <a href="resume.html">Resume<br></a>
+            <a href="service.html">Service<br></a>
+            <a href="portfolio.html">Projects<br></a>
+            <a href="contact.html">Contact</a>
+            <a onclick = "switchTheme()">Switch Theme</button></a>
+        </div>
+        <div class="body-text">
+            <p>
+                <a href="Andrew Wheir Resume.pdf">My Resume (PDF)</a><br><br>
+
+                I’ve been studying Computer Science for about 6 years now. I’m most familiar with C++ and Java, though Python is my go too for quick projects. 
+                I am also familiar with Haskell, x86 Assembly, C, along with the HTML, CSS and Javascript used to build this website. The areas of coding I want 
+                to learn more about are Data Analytics and Visualization.<br><br>
+
+                Outside of programming, I have lots of experience with the modeling softwares 
+                <a href="https://www.autodesk.com/products/inventor/overview?">Autodesk Inventor</a> and AutoCAD. As a part of my job at the 
+                <a href="https://engineering.tamu.edu/academics/fedc/index.html"> Fisher Engineering Design Center</a>, 
+                I have lots of experience with 3D Printing, Laser Cutting, and PCB Manufacturing, along with general maker skills like soldering and circuit design. 
+                I’m also proficient in basic photo editing using paint.net.<br><br>
+            </p>
+        </div>
     </body>
 </html>
+
