--- a/service.html
+++ b/service.html
@@ -5,13 +5,25 @@
         <title>Andrew Wheir's Webpage</title>
     </head>
     <body>
-        <h1>Service</h1>
-        <p>Page with my service stuff, eventually</p>
-        <a href="index.html">Home Page<br></a>
-        <a href="about.html">About Me<br></a>
-        <a href="resume.html">Resume<br></a>
-        <a href="service.html">Service<br></a>
-        <a href="portfolio.html">Projects<br></a>
-        <a href="contact.html">Contact</a>
+        <h1>Andrew Wheir - Service</h1>
+        <script src="functions.js"></script>
+        <div class="sidenav">
+            <a onclick = "switchLand()" href="index.html">Home Page<br></a>
+            <a href="about.html">About Me<br></a>
+            <a href="resume.html">Resume<br></a>
+            <a href="service.html">Service<br></a>
+            <a href="portfolio.html">Projects<br></a>
+            <a href="contact.html">Contact</a>
+            <a onclick = "switchTheme()">Switch Theme</button></a>
+        </div>
+        <div class="body-text">
+            <p>
+                I’ve recently been hired as a part of the College of Visualization MentorCorp program. 
+                This program is designed to teach low income students STEM concepts through projects during science class. 
+                As a student mentor, I assist teachers who don’t know the STEM concepts in projects related to Circuits, 3D printing and other maker topics. <br><br>
+
+                I also volunteer each year at my local church <a href="https://cgsccdogh.org/">Christ the Good Shepherd</a>'s Fall Festival. 
+            </p>
+        </div>
     </body>
 </html>
